# garmin-connect-workout

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: training_plan.csv
routes/: Kerlingarfjöll Ultra 60 km.gpx
src/garmin_plan_uploader/: __init__.py  auth_manager.py  csv_parser.py  domain_models.py  garmin_client.py  main.py  workout_service.py
src/garmin_plan_uploader/gui/: __init__.py  app.py  calendar_widget.py  download_widget.py  login_widget.py  templates_widget.py  upload_widget.py  workers.py
src/garmin_plan_uploader/gui/builder/: __init__.py  builder_widget.py  calendar_grid.py  dashboard.py  models.py  step_editor.py  template_library.py
tests/: test_csv_parser.py  test_domain_models.py
