[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "garmin-plan-uploader"
version = "1.0.0"
description = "CLI tool to upload CSV training plans to Garmin Connect"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Tyler Elias", email = "tyler@example.com" }
]
keywords = ["garmin", "training", "workout", "running", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "garminconnect>=0.2.19",
    "garth>=0.4.0",
    "pydantic>=2.5.0",
    "pandas>=2.1.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pandas-stubs>=2.1.0",
]

[project.scripts]
garmin-plan-uploader = "garmin_plan_uploader.main:app"

[project.urls]
Homepage = "https://github.com/tylerelias/garmin-connect-workout"
Repository = "https://github.com/tylerelias/garmin-connect-workout"

[tool.hatch.build.targets.wheel]
packages = ["src/garmin_plan_uploader"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src/garmin_plan_uploader --cov-report=term-missing"
